Code improvements